syntax = "proto3";

package agent;

option go_package = "agentpb";

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "inventorypb/files.proto";

//
// There should not be a request for getting a list of files:
// pmm-managed should store information about files in their own database.
//

// DownloadFileChunkRequest is an ServerMessage requesting file chunk download.
message DownloadFileChunkRequest {
  inventory.FileType file_type = 1;
  string file_id = 2 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
  int64 offset = 3 [
    (validator.field) = {
      int_gt: -1
    }
  ];
  int64 chunk_size = 4 [
    (validator.field) = {
      int_gt: -1
    }
  ];
}

// DownloadFileChunkResponse is an AgentMessage containing requested file chunk.
message DownloadFileChunkResponse {
  bytes chunk = 1 [
    (validator.field) = {
      length_gt: -1
    }
  ];
  int64 file_size = 2 [
    (validator.field) = {
      length_gt: -1
    }
  ];
}

// DeleteFileRequest is an ServerMessage requesting file deletion.
message DeleteFileRequest {
  inventory.FileType file_type = 1;
  string file_id = 2 [
    (validator.field) = {
      string_not_empty: true
    }
  ];
}

// DeleteFileResponse is an AgentMessage confirming file deletion.
message DeleteFileResponse {}
